redirect to twitter page, since vladimir-vg.me is discontinued

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   
-    <meta http-equiv="refresh" content="1;url=http://vladimir-vg.me/">
+    <meta http-equiv="refresh" content="1;url=https://twitter.com/vladimir_vg">
     <script language="javascript">
-        window.location.href = "http://vladimir-vg.me/"
+        window.location.href = "https://twitter.com/vladimir_vg";
     </script>
   
 
